--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/jsonwebtoken": "^9.0.6",
     "prisma": "^5.13.0",
     "tsc-watch": "^6.2.0",
     "typescript": "^5.4.5"
@@ -18,7 +20,10 @@
   "dependencies": {
     "@apollo/server": "^4.10.4",
     "@prisma/client": "^5.13.0",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "express": "^4.19.2",
-    "graphql": "^16.8.1"
+    "graphql": "^16.8.1",
+    "jsonwebtoken": "^9.0.2"
   }
 }
